# corrtraining

./: CMakeLists.txt  README.md  main.cpp  plot_loss_avsc.py
include/: CMakeLists.txt  action.cpp  action.hpp  actor_critic.cpp  actor_critic.hpp  agent.cpp  agent.hpp  buffer.cpp  buffer.hpp  environment.cpp  environment.hpp  model.cpp  model.hpp  reward.cpp  reward.hpp  state.cpp  state.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  test_action.cpp  test_actor_critic.cpp  test_agent.cpp  test_buffer.cpp  test_environment.cpp  test_model.cpp  test_reward.cpp  test_state.cpp  test_utils.cpp
