add_executable(test_utils test_utils.cpp)
add_executable(test_action test_action.cpp)
add_executable(test_state test_state.cpp)
add_executable(test_reward test_reward.cpp)
add_executable(test_buffer test_buffer.cpp)
add_executable(test_agent test_agent.cpp)
add_executable(test_model test_model.cpp)
add_executable(test_environment test_environment.cpp)
add_executable(test_actor_critic test_actor_critic.cpp)